--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,16 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    attributes:
+      admin/blog:
+        title: タイトル
+        content: 投稿内容
+      user/blog:
+        title: タイトル
+        content: 投稿内容
+      admin_user:
+        email: メールアドレス
+        password: パスワード
   date:
     abbr_day_names:
     - 日
